# tprosshy

./: Cargo.toml  README.md  docker-compose.yml  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
legacy/: frame.rs  local_proxy.rs  magic.rs  mux.rs  remote_proxy.rs
src/: frame.rs  lib.rs  local_proxy.rs  magic.rs  methods.rs  proxy.rs  proxy2.rs  remote_proxy.rs  ssh.rs  utils.rs
src/methods/: nft.rs
tests/: integration_test.rs
