[package]
name = "tprosshy"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "2.0.1"
tempfile = "3.19.1"
once_cell = "1.21.3"
which = "7.0.3"
libc = "0.2.171"
env_logger = "0.11.8"
chrono = "0.4.38"
log = "0.4"
ctrlc = "3.4.6"
tokio = { version = "1.46.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["rt"] }
clap = { version = "4.5.45", features = ["derive"] }
socket2 = "0.6.0"
resolv-conf = "0.7.5"

[lib]
name = "tprosshy"
path = "src/lib.rs"

[[bin]]
name = "local"
path = "src/bin/local.rs"

[[bin]]
name = "remote"
path = "src/bin/remote.rs"

[[bin]]
name = "remote_mock"
path = "src/bin/mock/remote.rs"

[[bin]]
name = "local_mock"
path = "src/bin/mock/local.rs"

[[bin]]
name = "client"
path = "src/bin/sandbox/client.rs"

[[bin]]
name = "server"
path = "src/bin/sandbox/server.rs"
