[package]
name = "tprosshy"
version = "0.1.0"
edition = "2024"

[dependencies]
tempfile = "3.19.1"
once_cell = "1.21.3"
which = "7.0.3"
env_logger = "0.11.8"
chrono = "0.4.38"
log = "0.4"
ctrlc = "3.4.6"
tokio = { version = "1.46.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["rt"] }
clap = { version = "4.5.45", features = ["derive"] }
socket2 = "0.6.0"
fast-socks5 = "0.10.0"
console-subscriber = "0.2"

[lib]
name = "tprosshy"
path = "src/lib.rs"

[[bin]]
name = "tprosshy"
path = "src/bin/main.rs"
