[package]
name = "tprosshy"
version = "1.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["ssh", "nftables", "proxy", "socks5", "dns-over-tcp"]
categories = ["network-programming", "os::linux-apis", "command-line-utilities"]
description = "sshuttle RIIR"
repository = "https://github.com/weezurd/tprosshy"
readme = "README.md"

[dependencies]
tempfile = "3.19.1"
once_cell = "1.21.3"
which = "7.0.3"
env_logger = "0.11.8"
chrono = "0.4.38"
log = "0.4"
ctrlc = "3.4.6"
tokio = { version = "1.46.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["rt"] }
clap = { version = "4.5.45", features = ["derive"] }
socket2 = "0.6.0"
fast-socks5 = "0.10.0"
console-subscriber = "0.5.0"
domain = "0.11.1"

[lib]
name = "tprosshy"
path = "src/lib.rs"

[[bin]]
name = "tprosshy"
path = "src/bin/main.rs"
